# StructVis

./: LICENSE  README.md  diagram_categories.json  pyproject.toml  requirements.txt
src/structvis/: __main__.py  cli.py  render_proxy.py  util.py
src/structvis/data_generator/: caption_data_generator.py  data_generator.py  persona_data_generator.py  persona_query_data_generator.py  personas_label_data_generator.py  qa_data_generator.py  scoring_data_generator.py  structured_data_generator.py
src/structvis/data_generator/configs/llm/: devstral-2-123b-instruct.yaml  gpt-oss-120b.yaml  mistral-large-3-675b-instruct-nvfp4.yaml  mistral-small-32-24b-instruct.yaml  nemotron-3-nano-30b.yaml  nextcoder-32b.yaml  qwen-3-235b-instruct.yaml  qwen-3-coder-480b-instruct.yaml
src/structvis/evaluation/: evaluate_code_generation.py  evaluate_public_bench.sh  evaluate_testset.py
src/structvis/filtering/: assemble_dataset.py  filter_generations.py  mappings.py  split_dataset.py
src/structvis/personas/: filter_personas_semantic_hf.py  persona_pipeline.py  personas_clustering.py  personas_dedup.py  personas_infer_clusters.py
src/structvis/prompt_templates/: templates_enrichment.py  templates_generation.py  templates_personas.py  templates_refinement.py
src/structvis/training/: train_sft.py
